--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -1,31 +1,55 @@
-<p id="notice"><%= notice %></p>
+<h4>Taxis</h4>
 
-<h1>Owners</h1>
+<!-- # -->
+<div class="actions row">
 
-<table>
+  <div class="col-md-4">
+    <%= link_to new_owner_path, :class => 'btn btn-info btn-sm' do %>
+        <%= fa_icon 'plus' %> Ajouter un nouveau Propriétaire
+    <% end %>
+  </div>
+
+  <div class="col-md-4 ml-auto">
+    <input type="search"
+           class="form-control"
+           id="search-owner"
+           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+  </div>
+
+</div>
+
+<!-- # -->
+<table id="owner-data" class="table table-bordered">
   <thead>
     <tr>
-      <th>Full name</th>
-      <th>Home phone</th>
-      <th>Mobile phone</th>
-      <th colspan="3"></th>
+      <th>Nom Complet</th>
+      <th>Telephone Fixe</th>
+      <th>Telephone Mobile</th>
+      <th class="td-actions">Actions</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @owners.each do |owner| %>
+  <% @owners.each do |owner| %>
       <tr>
         <td><%= owner.full_name %></td>
         <td><%= owner.home_phone %></td>
         <td><%= owner.mobile_phone %></td>
-        <td><%= link_to 'Show', owner %></td>
-        <td><%= link_to 'Edit', edit_owner_path(owner) %></td>
-        <td><%= link_to 'Destroy', owner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to owner, :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'eye' %>
+          <% end %>
+          <%= link_to edit_owner_path(owner), :class => 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'pencil' %>
+          <% end %>
+          <%= link_to owner, method: :delete, data: {confirm: 'Êtes vous sur?'}, class: 'btn btn-outline-dark btn-sm' do %>
+              <%= fa_icon 'close' %>
+          <% end %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
+
 </table>
 
-<br>
 
-<%= link_to 'New Owner', new_owner_path %>
