--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Owner</h1>
+<h4>New Owner</h4>
 
 <%= render 'form', owner: @owner %>
 
-<%= link_to 'Back', owners_path %>
+<%= link_to owners_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
