--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,19 +1,26 @@
-<p id="notice"><%= notice %></p>
+<h4><%= @owner.full_name %> - Detail</h4>
 
-<p>
-  <strong>Full name:</strong>
-  <%= @owner.full_name %>
-</p>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Nom Complet</th>
+    <th>Telephone Fixe</th>
+    <th>Telephone Mobile</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><%= @owner.full_name %></td>
+    <td><%= @owner.home_phone %></td>
+    <td><%= @owner.mobile_phone %> km(s)</td>
+  </tr>
+  </tbody>
+</table>
 
-<p>
-  <strong>Home phone:</strong>
-  <%= @owner.home_phone %>
-</p>
+<%= link_to owners_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
 
-<p>
-  <strong>Mobile phone:</strong>
-  <%= @owner.mobile_phone %>
-</p>
-
-<%= link_to 'Edit', edit_owner_path(@owner) %> |
-<%= link_to 'Back', owners_path %>
+<%= link_to edit_owner_path(@owner), :class => 'badge badge-dark' do %>
+    <%= fa_icon 'pencil' %> Edit
+<% end %>
