Update Cabs Views JS & HTML

--- a/app/views/cab_models/_form.html.erb
+++ b/app/views/cab_models/_form.html.erb
@@ -1,55 +1,123 @@
-<%= form_with(model: cab_model, local: true) do |form| %>
-  <% if cab_model.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(cab_model.errors.count, "error") %> prohibited this cab_model from being saved:</h2>
+<%= form_for @cab_model do |form| %>
 
-      <ul>
-      <% cab_model.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="form-group row">
+      <%= form.label 'Name', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :name, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'name'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'name'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :cab_model_name %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Manufacturer Year', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.date_field :manufacture_year, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'manufacture_year'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'manufacture_year'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :cab_model_description %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Fuel Type', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.collection_select :fuel_type_id, FuelType.group(:name), :id, :name, {
+          :multiple => false,
+          :include_blank => 'Select a Fuel Type',
+        },{ class: 'form-control' }
+        %>
+        <% if !@cab_model.errors.messages[:'fuel_type_id'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'fuel_type_id'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :manufacture_year %>
-    <%= form.date_select :manufacture_year, id: :cab_model_manufacture_year %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Sheet Metal', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_field :sheet_metal, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'sheet_metal'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'sheet_metal'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :fuel_type_id %>
-    <%= form.collection_select :fuel_type_id, FuelType.group(:name), :id, :name, {
-      :multiple => false,
-      :include_blank => 'Select a Fuel Type',
-    } %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Number of Power HP', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.number_field :power_hp, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'power_hp'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'power_hp'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :sheet_metal %>
-    <%= form.text_field :sheet_metal, id: :cab_model_sheet_metal %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Number of Places', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.number_field :number_places, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'number_places'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'number_places'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :power_hp %>
-    <%= form.number_field :power_hp, id: :cab_model_power_hp %>
-  </div>
+    <div class="form-group row">
+      <%= form.label 'Description', class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-10">
+        <%= form.text_area :description, class: 'form-control' %>
+        <% if !@cab_model.errors.messages[:'description'].empty?  %>
+            <ul>
+              <% @cab_model.errors.messages[:'description'].each do |message| %>
+                  <li>
+                    <small class="form-text text-muted text-error"><%= message %></small>
+                  </li>
+              <% end %>
+            </ul>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :number_places %>
-    <%= form.number_field :number_places, id: :cab_model_number_places %>
-  </div>
+    <div class="actions">
+      <%= form.submit 'Sauvegarder', :class => 'btn btn-info' %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
