--- a/app/views/cab_models/new.html.erb
+++ b/app/views/cab_models/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Cab Model</h1>
+<h4>New Owner</h4>
 
 <%= render 'form', cab_model: @cab_model %>
 
-<%= link_to 'Back', cab_models_path %>
+<%= link_to cab_models_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
