--- a/app/views/fuel_types/edit.html.erb
+++ b/app/views/fuel_types/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Fuel Type</h1>
+<h4>Fuel Type - Edit</h4>
 
 <%= render 'form', fuel_type: @fuel_type %>
 
-<%= link_to 'Show', @fuel_type %> |
-<%= link_to 'Back', fuel_types_path %>
+<%= link_to fuel_types_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
+
+<%= link_to @fuel_type, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> Consulter Detail
+<% end %>
