--- a/app/views/fuel_types/index.html.erb
+++ b/app/views/fuel_types/index.html.erb
@@ -1,22 +1,34 @@
-<h4>Types de carburants</h4>
+<h4>Taxis</h4>
 
-<div class="actions form-inline">
-  <%= link_to new_fuel_type_path, :class => 'btn btn-info btn-sm' do %>
-      Ajouter un type de carburant
-  <% end %>
+<!-- # -->
+<div class="actions row">
+
+  <div class="col-md-4">
+    <%= link_to new_fuel_type_path, :class => 'btn btn-info btn-sm' do %>
+        <%= fa_icon 'plus' %> Ajouter un nouveau Propriétaire
+    <% end %>
+  </div>
+
+  <div class="col-md-4 ml-auto">
+    <input type="search"
+           class="form-control"
+           id="search-fuel-type"
+           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+  </div>
+
 </div>
 
-<table class="table table-bordered table-responsive">
-
+<!-- # -->
+<table id="fuel-type-data" class="table table-bordered">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Actions</th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th class="td-actions">Actions</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @fuel_types.each do |fuel_type| %>
+  <% @fuel_types.each do |fuel_type| %>
       <tr>
         <td><%= fuel_type.name %></td>
         <td>
@@ -31,7 +43,7 @@
           <% end %>
         </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
-</table>
 
+</table>
