--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -12,7 +12,7 @@
   <tr>
     <td><%= @owner.full_name %></td>
     <td><%= @owner.home_phone %></td>
-    <td><%= @owner.mobile_phone %> km(s)</td>
+    <td><%= @owner.mobile_phone %></td>
   </tr>
   </tbody>
 </table>
