--- a/app/views/damage_types/edit.html.erb
+++ b/app/views/damage_types/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Damage Type</h1>
+<h4>Damage Type - Edit</h4>
 
 <%= render 'form', damage_type: @damage_type %>
 
-<%= link_to 'Show', @damage_type %> |
-<%= link_to 'Back', damage_types_path %>
+<%= link_to damage_types_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
+
+<%= link_to @damage_type, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> Consulter Detail
+<% end %>
