--- a/app/views/damage_types/new.html.erb
+++ b/app/views/damage_types/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Damage Type</h1>
+<h4>New Damage Type</h4>
 
 <%= render 'form', damage_type: @damage_type %>
 
-<%= link_to 'Back', damage_types_path %>
+<%= link_to damage_types_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
