--- a/app/views/insurers/new.html.erb
+++ b/app/views/insurers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Insurer</h1>
+<h4>New Insurer</h4>
 
 <%= render 'form', insurer: @insurer %>
 
-<%= link_to 'Back', insurers_path %>
+<%= link_to insurers_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
